lab-northbound-k8s-ingress/yaml/pu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pu-service
spec:
  selector:
    selectorId: rest-xap-pu
  ports:
    - protocol: TCP
      port: 8091
      targetPort: 8091
